objects/AlexFieldHistoryObject__c.object
<CustomObject>
    <description>https://gearsethq.slack.com/archives/C4HFWBMC2/p1596799702312600</description>
    <fields>
        <fullName>FieldWeChangeHistoryTrack__c</fullName>
        <defaultValue>Today()-1</defaultValue>
        <label>FieldWeChangeHistoryTrack</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieldWeDoNotTrackHistory__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>FieldWeDoNotTrackHistory</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieldWeDoTrackHistory__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>FieldWeDoTrackHistory</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>AlexFieldHistoryObject</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AlexFieldHistoryObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AlexFieldHistoryObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>